# production-rag-system

./: .gitignore  MANIFEST.in  README.md  __init__.py  pyproject.toml  setup.py
config/: __init__.py  settings.py
core/: rag_system.py
examples/: advanced_retrieval.py  basic_usage.py  conversation_persistence.py  conversational_ai.py
logger_utils/: __init__.py
logging/: config.py
processing/: documents.py
production_rag_system/core/: __init__.py  device.py  rag_system.py
production_rag_system/examples/: .env.template  README.md  advanced_retrieval.py  basic_usage.py  conversational_ai.py  document_processing.py
production_rag_system/examples/chroma_db_example/: chroma.sqlite3
production_rag_system/examples/conversations/: ai_discussion_buffer.json  ai_discussion_summary.json
production_rag_system/examples/test_docs/: ai_basics.txt  fresh_docs_1.txt  fresh_docs_2.txt  new_doc1.txt  new_doc2.txt  python_guide.txt  rag_systems.txt  test_document.txt
production_rag_system/exceptions/: __init__.py  base.py
production_rag_system/logger_utils/: config.py
production_rag_system/monitoring/: __init__.py  performance.py
production_rag_system/processing/: __init__.py  documents.py
production_rag_system/retrieval/: __init__.py  retrievers.py
production_rag_system/web_app/: README.md  __init__.py  app.py
retrieval/: memory.py  retrievers.py
validation/: __init__.py  models.py
web_app/: __main__.py  app.py
