[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "production-rag-system"
version = "1.0.0"
description = "A modular, production-ready Retrieval-Augmented Generation (RAG) system with web app frontend, comprehensive error handling, documents processing tools, input validation, and monitoring capabilities"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Vadim-Dani Dubinsky", email = "dani.dubinsky@gmail.com"}]

requires-python = ">=3.8"

dependencies = [
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-chroma>=0.1.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pypdf>=3.0.0",  # Updated to use pypdf instead of pypdf2
    "python-docx>=0.8.11",
    "tenacity>=8.0.0",
    "torch>=2.0.0",
    "streamlit>=1.28.0"
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["production_rag_system*"]
